Bug 331953 - Applets added into system tray are not marked in widget explorer
Summary: Applets added into system tray are not marked in widget explorer
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-10 11:02 UTC by Bhushan Shah
Modified: 2014-05-19 16:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2014-03-10 11:02:19 UTC
Applets added into system tray are not marked in widget explorer
Comment 1 Marco Martin 2014-04-03 10:06:38 UTC
technically they are not applets and don't really exist in the corona.
i'm not sure if is feasible at all tracking them
Comment 2 David Edmundson 2014-05-19 16:00:04 UTC
Git commit 23e7bb1774e10b2a9d955c85f41f64c257f2adf2 by David Edmundson.
Committed on 14/05/2014 at 13:01.
Pushed by davidedmundson into branch 'master'.

Show applets from the system tray in Widget Explorer

REVIEW: 118126

M  +2    -0    applets/systemtray/plugin/protocols/plasmoid/plasmoidprotocol.cpp
M  +21   -10   shell/widgetexplorer/widgetexplorer.cpp

http://commits.kde.org/plasma-workspace/23e7bb1774e10b2a9d955c85f41f64c257f2adf2