Show applets from the system tray in Widget Explorer

REVIEW: 118126
BUG: 331953